Make sure native checkboxes are properly hidden on iOS.

--- a/Themes/natural/css/_forms.scss
+++ b/Themes/natural/css/_forms.scss
@@ -130,6 +130,7 @@ input[type=checkbox], input[type=radio] {
 }
 
 input[type=checkbox] {
+	-webkit-appearance: none;
 	appearance: none;
 
 	&::after {
